<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/window_bac"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/left_right_padding"
        android:layout_marginRight="@dimen/left_right_padding"
        android:layout_marginTop="@dimen/left_right_padding"
        android:background="@drawable/radius_bac"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/left_right_padding"
            android:paddingRight="@dimen/left_right_padding">

            <ImageView
                android:layout_width="17dp"
                android:layout_height="17dp"
                android:src="@drawable/input_account_img" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/left_right_padding">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edt_account"
                        style="@style/EditTextStyle_login"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:hint="@string/login_account_hint"
                        android:maxLines="1"
                        android:inputType="textVisiblePassword"/>

                    <LinearLayout
                        android:id="@+id/ll_account_cancel"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:gravity="center"
                        android:layout_gravity="center_vertical"
                        android:visibility="gone">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/edit_text_cancel" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/line_height"
                    android:layout_alignParentBottom="true"
                    android:background="@color/line_color" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="59dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/left_right_padding"
                android:layout_marginRight="@dimen/left_right_padding"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/input_pwd_img" />

                <EditText
                    android:id="@+id/edt_pwd"
                    style="@style/EditTextStyle_login"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/left_right_padding"
                    android:hint="@string/login_pwd_hint"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:imeOptions="actionDone"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginLeft="3dp">

                    <LinearLayout
                        android:id="@+id/ll_pwd_cancel"
                        android:layout_width="24dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:visibility="gone">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/edit_text_cancel" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_forget_pwd"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginRight="@dimen/left_right_padding"
                        android:gravity="center"
                        android:layout_marginLeft="6dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/login_forget_pwd"
                            android:textSize="13sp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:layout_alignParentBottom="true"
                android:background="@color/line_color" />
        </RelativeLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:background="@null"
            android:enabled="false"
            android:text="@string/login_login"
            android:textColor="@color/selector_color_login_button_text"
            android:textSize="16sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_marginLeft="@dimen/left_right_padding"
        android:layout_marginRight="@dimen/left_right_padding"
        android:layout_marginTop="7dp"
        android:background="@drawable/radius_bac"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical">

            <View
                android:layout_width="30dp"
                android:layout_height="@dimen/line_height"
                android:layout_marginLeft="12dp"
                android:background="@color/line_color" />

            <TextView
                style="@style/textStyle_11_black2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/login_other_login" />

            <View
                android:layout_width="30dp"
                android:layout_height="@dimen/line_height"
                android:layout_marginLeft="12dp"
                android:background="@color/line_color" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="@dimen/left_right_padding"
            android:paddingRight="@dimen/left_right_padding">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/we_chat_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/we_chat_login_big" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/login_we_chat"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/sina_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/sina_login_big" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/login_we_chat"
                    android:visibility="gone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/qq_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/qq_login_big" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/login_we_chat"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rl_register"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:paddingLeft="@dimen/left_right_padding"
            android:paddingRight="@dimen/left_right_padding"
            android:layout_marginTop="10dp"
            android:background="?android:attr/selectableItemBackground">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_height"
                android:background="@color/line_color" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TextView
                    style="@style/textStyle_12_black3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/left_right_padding"
                    android:text="@string/login_no_account" />

                <TextView
                    style="@style/textStyle_12_red"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/left_right_padding"
                    android:gravity="center"
                    android:text="@string/login_register" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/left_right_padding"
                android:src="@drawable/more_right" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>